errorlogs/1516472787804-Program3- DeterminePrimes.py.txt
err:winediag:SECUR32_initNTLMSP ntlm_auth was not found or is outdated. Make sure that ntlm_auth >= 3.0.25 is in your path. Usually, you can find it in the winbind package of your distribution.
137 INFO: PyInstaller: 3.3.1
138 INFO: Python: 3.4.4
138 INFO: Platform: Windows-XP-5.1.2600-SP3
142 INFO: wrote Z:\p2e\Program3- DeterminePrimes.spec
148 INFO: UPX is not available.
148 INFO: Removing temporary files and cleaning cache in C:\users\root\Application Data\pyinstaller
160 INFO: Extending PYTHONPATH with paths
['Z:\\p2e\\workingdir\\1516472787804', 'Z:\\p2e']
160 INFO: checking Analysis
160 INFO: Building Analysis because out00-Analysis.toc is non existent
160 INFO: Initializing module dependency graph...
168 INFO: Initializing module graph hooks...
172 INFO: Analyzing base_library.zip ...
6786 INFO: Processing pre-find module path hook   distutils
10119 INFO: running Analysis out00-Analysis.toc
10619 INFO: Caching module hooks...
10632 INFO: Analyzing Z:\p2e\workingdir\1516472787804\Program3- DeterminePrimes.py

Syntax error in Z:\p2e\workingdir\1516472787804\Program3- DeterminePrimes.py
  File "Z:\p2e\workingdir\1516472787804\Program3- DeterminePrimes.py", line 33
     print(f"There are {count} prime numbers less than {number_bound}.")
                                                                      ^
 SyntaxError: invalid syntax

